# dse.standards

./: CONTRIBUTING.md  Makefile  README.md
doc/: Makefile
doc/content/apis/ncodec/: index.md
doc/content/apis/ncodec/examples/: ncodec_api.c
doc/yed/: fmi-ls-binary-codec.graphml  fmi-ls-binary-to-text.graphml  fmi-ls-bus-topology-fmu-vbus.graphml  fmi-ls-bus-topology-ncodec-vbus.graphml  fmi-ls-bus-topology.graphml  fmi-ls-pdunet-bus-topology.graphml  fmi-ls-pdunet-data-exchange.graphml  fmi-ls-pdunet-embedded-netbus.graphml  fmi-ls-pdunet-embedded-simbus.graphml  fmi-ls-pdunet-embedded-simulation.graphml  fmi-ls-pdunet-software-stack.graphml  fmi-ls-pdunet-virtual-networks.graphml
dse/ncodec/: README.md  codec.c  codec.h
dse/ncodec/example/: CMakeLists.txt  Makefile  README.md  codec.c  dynamic.c  example.c  static.c  stream.c
dse/ncodec/libs/automotive-bus/: CMakeLists.txt  Makefile  README.md  codec.c  codec.h  frame_can_fbs.c  pdu_fbs.c
dse/ncodec/libs/automotive-bus/tests/: CMakeLists.txt  Makefile  __test__.c  stream.c  test_can_fbs.c  test_codec.c  test_pdu_fbs.c  testing.h
licenses/: FlatCC.md
licenses/GMOME/libxml2/: Copyright  __url__
licenses/modelica/fmi-standard/v2.0.x/: LICENSE.txt  __url__
licenses/modelica/fmi-standard/v3.0.x/: LICENSE.txt  __url__
modelica/fmi-ls-binary-codec/: README.md
modelica/fmi-ls-binary-codec/schema/: fmi-ls-binary-codec.xsd
modelica/fmi-ls-binary-string/: README.md
modelica/fmi-ls-binary-string/headers/: fmi2Binary.h
modelica/fmi-ls-binary-string/schema/: fmi-ls-binary-string.xsd
modelica/fmi-ls-binary-to-text/: README.md
modelica/fmi-ls-binary-to-text/code/: CMakeLists.txt  Makefile  ascii85.c
modelica/fmi-ls-binary-to-text/schema/: fmi-ls-binary-to-text.xsd
modelica/fmi-ls-bus-topology/: README.md
modelica/fmi-ls-bus-topology/code/: CMakeLists.txt  Makefile  bus_topology.c  bus_topology.h  ncodec.c  parser.c  stream.c
modelica/fmi-ls-bus-topology/code/example/: CMakeLists.txt  fmu.c  modelDescription.xml
modelica/fmi-ls-bus-topology/code/tests/: CMakeLists.txt  __test__.c  test_bus_topology.c  test_ncodec.c  test_parser.c  testing.h
modelica/fmi-ls-bus-topology/schema/: fmi-ls-bus-topology.xsd
modelica/fmi-ls-pdu-net/: README.md
modelica/fmi-ls-pdu-net/schema/: fmi-ls-pdunet.xsd
modelica/fmi-ls-pdunet/: README.md
